// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CorrectResponse renders snapshot 1`] = `
<div>
  <WithStyles(Typography)
    component="div"
    variant="subheading"
  >
    <span>
      Define Tool Set and Correct Response
    </span>
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="div"
    variant="body1"
  >
    <span>
      Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
    </span>
  </WithStyles(Typography)>
  <Tools
    classes={Object {}}
    hasErrors={false}
    onDefaultToolChange={[Function]}
    toggleToolBarTool={[Function]}
    toolbarTools={
      Array [
        "circle",
        "line",
        "label",
        "parabola",
        "point",
        "polygon",
        "ray",
        "segment",
        "sine",
        "vector",
      ]
    }
  />
  <div
    key="correct-response-graph-Correct Answer"
  >
    <div>
      <p>
        Correct Answer
      </p>
    </div>
    <Root
      axesSettings={
        Object {
          "includeArrows": Object {
            "down": true,
            "left": true,
            "right": true,
            "up": true,
          },
        }
      }
      backgroundMarks={Array []}
      coordinatesOnHover={false}
      disabledLabels={true}
      disabledTitle={true}
      domain={
        Object {
          "axisLabel": "x",
          "labelStep": 1,
          "max": 5,
          "min": -5,
          "step": 1,
        }
      }
      draggableTools={true}
      labels={Object {}}
      marks={Array []}
      onChangeMarks={[Function]}
      onChangeTools={[Function]}
      range={
        Object {
          "axisLabel": "y",
          "labelStep": 1,
          "max": 5,
          "min": -5,
          "step": 1,
        }
      }
      showLabels={true}
      showTitle={true}
      size={
        Object {
          "height": 500,
          "width": 500,
        }
      }
      title=""
      toolbarTools={
        Array [
          "circle",
          "line",
          "label",
          "parabola",
          "point",
          "polygon",
          "ray",
          "segment",
          "sine",
          "vector",
        ]
      }
    />
  </div>
  <div
    onClick={[Function]}
  >
    ADD ALTERNATE
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`CorrectResponse: if answers is null it should still work as expected renders snapshot 1`] = `
<div>
  <WithStyles(Typography)
    component="div"
    variant="subheading"
  >
    <span>
      Define Tool Set and Correct Response
    </span>
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="div"
    variant="body1"
  >
    <span>
      Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
    </span>
  </WithStyles(Typography)>
  <Tools
    classes={Object {}}
    hasErrors={false}
    onDefaultToolChange={[Function]}
    toggleToolBarTool={[Function]}
    toolbarTools={Array []}
  />
  <div
    onClick={[Function]}
  >
    ADD ALTERNATE
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`CorrectResponse: if answers is undefined it should still work as expected renders snapshot 1`] = `
<div>
  <WithStyles(Typography)
    component="div"
    variant="subheading"
  >
    <span>
      Define Tool Set and Correct Response
    </span>
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="div"
    variant="body1"
  >
    <span>
      Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
    </span>
  </WithStyles(Typography)>
  <Tools
    classes={Object {}}
    hasErrors={false}
    onDefaultToolChange={[Function]}
    toggleToolBarTool={[Function]}
    toolbarTools={Array []}
  />
  <div
    onClick={[Function]}
  >
    ADD ALTERNATE
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`Tools renders snapshot 1`] = `
<div>
  <div>
    <span>
      GRAPHING TOOLS
    </span>
  </div>
  <div />
</div>
`;
